workloads/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: wildcard-home-tls
